--- a/view/wire5.html
+++ b/view/wire5.html
@@ -8,12 +8,13 @@
     <meta name=viewport content="width=device-width, initial-scale=.8, minimum-scale = .8, user-scalable=yes">
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
-    <script src="../js/jquery-1.11.2.min.js"></script>
+    <script data-require="underscore.js@*" data-semver="1.6.0" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js"></script>
+
+
     <script src="../js/velocity.min.js"></script>
     <script src="../js/main.js"></script>
     <script src="../js/wire5.js"></script>
-    <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+
 
 
 
@@ -80,7 +81,6 @@
                             <td>Type</td>
                             <td>
                                 <select id="item">
-                                    <option ></option>
                                 </select>
                             </td>
                         </tr>
