--- a/view/login.html
+++ b/view/login.html
@@ -14,7 +14,7 @@
     <script src="../js/jquery-1.11.2.min.js"></script>
     <script src="../js/velocity.min.js"></script>
     <script src="../js/main.js"></script>
-    <script src="../js/cookies.min.js"></script>
+    <script src="../js/component/cookies.min.js"></script>
 </head>
 
 <body>
@@ -96,7 +96,7 @@
                 req.setRequestHeader("X-Parse-REST-API-Key", apiKey);
                 req.send();  // Finally send the request
             });
-            
+
         }
     </script>
     <script>loadFooter();</script>
