calculated the data

--- a/view/wire5.html
+++ b/view/wire5.html
@@ -103,10 +103,8 @@
                             </td>
                         </tr>
                         <tr>
-                            <td>Unit Price</td>
-                            <td>
-                                <input name="price" id="price" type = "number" value="1250.60"min = "0" required>
-                            </td>
+                            <td>Market Price</td>
+                            <td id="price" >1270.00</td>
                         </tr>
                         <tr>
                             <td>Gold %</td>
@@ -115,10 +113,6 @@
                         <tr>
                             <td>Weight/unit (g)</td>
                             <td id="weight">1.244</td>
-                        </tr>
-                        <tr>
-                            <td>Gold g/u</td>
-                            <td id="goldg">1.244</td>
                         </tr>
                         <tr>
                             <td>Gold ozt/u</td>
@@ -131,6 +125,10 @@
                         <tr>
                             <td><strong>TOTAL</strong></td>
                             <td><strong id="total">1199.10</strong></td>
+                        </tr>
+                        <tr>
+                            <td><strong>TOTAL W/ Premium</strong></td>
+                            <td><strong id="totalPremium">1199.10</strong></td>
                         </tr>
                     </table>
                     
