updated fields and calculations

--- a/view/wire4.html
+++ b/view/wire4.html
@@ -11,6 +11,8 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <script src="../js/wire4.js"></script>
     <script src="../js/main.js"></script>
+    <script src="../js/cookies.min.js"></script>
+    <script src="../js/cacheit.js"></script>
     <title>Gold Item - Bull's Hit</title>
 </head>
 
@@ -76,28 +78,20 @@
                             <td id='premium'></td>
                         </tr>
                         <tr>
-                            <td>Unit Price</td>
-                            <td id='unitprice'></td>
+                            <td>Market Price</td>
+                            <td id='marketprice'></td>
                         </tr>
                         <tr>
-                            <td id='metalpercent'></td>
                             <td id='percent'></td>
+                            <td id='percentdata'></td>
                         </tr>
                         <tr>
-                            <td id='metalweight'></td>
-                            <td id='weightunit'></td>
+                            <td>Weight (ozt)</td>
+                            <td id='weightdata'></td>
                         </tr>
                         <tr>
-                            <td id='metalunit'></td>
-                            <td id='ounceunit'></td>
-                        </tr>
-                        <tr>
-                            <td id='metalozt'></td>
-                            <td id='troyounces'></td>
-                        </tr>
-                        <tr>
-                            <td>Total (ozt)</td>
-                            <td id='totaltroy'></td>
+                            <td id='perunit'></td>
+                            <td id='perunitdata'></td>
                         </tr>
                         <tr>
                             <td><strong>TOTAL</strong></td>
