added image from parse

--- a/view/wire4.html
+++ b/view/wire4.html
@@ -11,9 +11,8 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <script src="../js/wire4.js"></script>
     <script src="../js/main.js"></script>
-    <script src="../js/cookies.min.js"></script>
     <script src="../js/cacheit.js"></script>
-    <title>Gold Item - Bull's Hit</title>
+    <title>View Item - CoinBucket</title>
 </head>
 
 <body>
@@ -52,7 +51,7 @@
                 </a>
                 <section class="coin_image">
                     <div class="img_box">
-                        <div class="img_circle"></div>
+                        <img id="coin-img"></img>
                     </div>
                 </section>
                 <section class="coin_detail">
