--- a/view/wire2.html
+++ b/view/wire2.html
@@ -20,7 +20,7 @@
     <script src="../bower_components/zingchart/client/zingchart.min.js"></script>
     <script src="../js/wire2.chart.js"></script>
 
-    <title>Home - CoinFlip</title>
+    <title>Home - CoinBucket</title>
 </head>
 
 <body>
