--- a/view/wire3.html
+++ b/view/wire3.html
@@ -22,7 +22,7 @@
     <script src="../bower_components/zingchart/client/zingchart.min.js"></script>
     <script src="../js/wire3.chart.js"></script>
 
-    <title>My Gold - CoinFlip</title>
+    <title>My Gold - CoinBucket</title>
 </head>
 
 <body>
@@ -136,7 +136,7 @@ loadSideNav(1);
                         <section class="label-and-search">
                             <h3>My Gold</h3>
                             <div class="stack_ctrl">
-                                <input id="search" type="search" placeholder="Search"/>
+                                <input id="search" class="light" type="search" placeholder="Search"/>
                                 <a href="wire5.html">
                                     <i class="fa fa-plus fa-2x"></i>
                                 </a>
