Image Required Alert

--- a/view/wire5.html
+++ b/view/wire5.html
@@ -8,17 +8,11 @@
     <meta name=viewport content="width=device-width, initial-scale=.8, minimum-scale = .8, user-scalable=yes">
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <script data-require="underscore.js@*" data-semver="1.6.0" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js"></script>
 
-
+    <script src="../bower_components/underscore/underscore-min.js"></script>
     <link rel="stylesheet" type="text/css" href="../bower_components/font-awesome/css/font-awesome.min.css">
     <script src="../js/main.js"></script>
     <script src="../js/wire5.js"></script>
-
-
-
-
-
 
     <title>New Item - CoinBucket</title>
 </head>
@@ -64,8 +58,9 @@ loadSideNav(1);
                     <label id="btn-logo" onclick="triggerFunction()"><i class="fa fa-plus fa-2x"></i></label>
                     <img id="output" width = "150px" height="150px"/>
                 </div>
-
+                <label class="coin_image-required">Image Required</label>
             </section>
+
             <section class="coin_detail">
                 <table>
                     <tr>
