--- a/view/index.html
+++ b/view/index.html
@@ -12,15 +12,15 @@
     <script src="../js/jquery-1.11.2.min.js"></script>
     <script src="../js/velocity.min.js"></script>
     <script src="../js/main.js"></script>
-    <title>Login - Bull's Hit</title>
+    <title>Login - CoinBucket</title>
 </head>
 
 <body>
     <nav>
-        Bull's Hit
+        CoinBucket
     </nav>
     <div class="mobile-nav">
-        Bull's Hit
+        CoinBucket
     </div>
     <div id="w1-wrapper">
 
