--- a/view/login.html
+++ b/view/login.html
@@ -5,24 +5,25 @@
     <meta charset="UTF-8">
     <meta name="description" content="bullion management site, rare coins, gold, silver, platinum">
     <meta name="author" content="CSE134B Dream Team">
-    <title>Log In To Bull's Hit</title>
-    <link rel="stylesheet" type="text/css" href="../style/style.css">
+    <title>Log In To CoinBucket</title>
+
     <meta name=viewport content="width=device-width, initial-scale=.8, minimum-scale = .8, user-scalable=yes">
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <link data-require="purecss@*" data-semver="0.6.0" rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css" />
-    <script src="../js/jquery-1.11.2.min.js"></script>
-    <script src="../js/velocity.min.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="../style/style.css">
+    <link rel="stylesheet" type="text/css" href="../bower_components/pure/pure-min.css">
+
     <script src="../js/main.js"></script>
     <script src="../js/component/cookies.min.js"></script>
 </head>
 
 <body>
     <nav>
-        Bull's Hit
+        CoinBucket
     </nav>
     <div class="mobile-nav">
-        Bull's Hit
+        CoinBucket
     </div>
 
     <div id="w0-wrapper">
@@ -30,10 +31,10 @@
             <fieldset>
                 <legend>Log In</legend>
                 <label for="username">Username</label>
-                <input class="reg" id="username" name="username" type="text" placeholder="Username" required>
+                <input class="reg" id="username" name="username" type="text" placeholder="Username" style="background-color: white; color:black" required>
 
                 <label for="password">Password</label>
-                <input class="reg" id="password" name="password" type="password" placeholder="Password" required>
+                <input class="reg" id="password" name="password" type="password" placeholder="Password" style="background-color: white; color:black" required>
 
                 <button id="submitButton" type="button" class="pure-button pure-button-primary">Log In</button>
 
