--- a/view/wire4.html
+++ b/view/wire4.html
@@ -12,7 +12,7 @@
     <script src="../js/jquery-1.11.2.min.js"></script>
     <script src="../js/velocity.min.js"></script>
     <script src="../js/main.js"></script>
-    <title>Gold Item - Bull's Hit</title>
+    <title>Gold Item - CoinBucket</title>
 </head>
 
 <body>
