--- a/view/wire4.html
+++ b/view/wire4.html
@@ -9,9 +9,10 @@
     <meta name=viewport content="width=device-width, initial-scale=.8, minimum-scale = .8, user-scalable=yes">
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <script src="../js/wire4.js"></script>
+
     <script src="../js/main.js"></script>
     <script src="../js/cacheit.js"></script>
+    <script src="../js/wire4.js"></script>
     <title>View Item - CoinBucket</title>
 
 </head>
@@ -52,7 +53,7 @@
                 </a>
                 <section class="coin_image">
                     <div class="img_box">
-                        <img id="coin-img"></img>
+                        <img height="150" weight="150" id="coin-img" style="margin-top: 24px"></img>
                     </div>
                 </section>
                 <section class="coin_detail">
@@ -78,7 +79,7 @@
                             <td id='premium'></td>
                         </tr>
                         <tr>
-                            <td>Market Price</td>
+                            <td>Market Price (dollar/ozt)</td>
                             <td id='marketprice'></td>
                         </tr>
                         <tr>
@@ -86,7 +87,7 @@
                             <td id='percentdata'></td>
                         </tr>
                         <tr>
-                            <td>Weight (ozt)</td>
+                            <td>Weight/Unit (ozt)</td>
                             <td id='weightdata'></td>
                         </tr>
                         <tr>
