--- a/view/wire2.html
+++ b/view/wire2.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="../bower_components/font-awesome/css/font-awesome.min.css">
 
     <script src="../js/main.js"></script>
-    <script src="../assets/promise.js"></script>
+    <script src="../js/cacheit.js"></script>
     <script src="../js/wire2.js"></script>
 
     <script src="../bower_components/zingchart/client/zingchart.min.js"></script>
