--- a/view/wire3.html
+++ b/view/wire3.html
@@ -136,6 +136,7 @@ loadSideNav(1);
                         <section class="label-and-search">
                             <h3>My Gold</h3>
                             <div class="stack_ctrl">
+                                <i id="search-spinner" class="fa fa-spinner fa-spin" style="visibility: hidden;"></i>
                                 <input id="search" type="search" placeholder="Search"/>
                                 <a href="wire5.html">
                                     <i class="fa fa-plus fa-2x"></i>
