--- a/view/index.html
+++ b/view/index.html
@@ -25,7 +25,7 @@
     <div id="w1-wrapper">
 
         <section id="w1-left">
-            <h1>Bull's Hit</h1>
+            <h1>CoinBucket</h1>
             <h3>Manage your coin collection with a simple app.</h3>
             <a href="signup.html" style="color:black;"><span id="sign-up-button">Sign up</span></a>
             <a href="login.html" style="color:white;"><span id="log-in-button">Log in</span></a>
