pretty much works

--- a/view/wire2.html
+++ b/view/wire2.html
@@ -6,7 +6,7 @@
     <meta name="description" content="bullion management site, rare coins, gold, silver, platinum">
     <meta name="author" content="CSE134B CacheIt Team">
 
-    
+
     <meta name=viewport content="width=device-width, initial-scale=.8, minimum-scale = .8, user-scalable=yes">
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
@@ -67,7 +67,7 @@
                 </div>
                 <section class="market-list">
 
-                    <a href="wire3.html">
+                    <a href="wire3.html#gold">
                         <section class="market-item-header">
                             Gold
                             <svg class="icon icon-play-arrow">
@@ -95,7 +95,7 @@
                     </section>
 
 
-                    <a href="wire3.html">
+                    <a href="wire3.html#silver">
                         <section class="market-item-header">
                             Silver
                             <svg class="icon icon-play-arrow">
@@ -121,7 +121,7 @@
                             </tr>
                         </table>
                     </section>
-                    <a href="wire3.html">
+                    <a href="wire3.html#platinum">
                         <section class="market-item-header">
                             Platinum
                             <svg class="icon icon-play-arrow">
