--- a/view/login.html
+++ b/view/login.html
@@ -38,7 +38,12 @@
                 <button id="submitButton" type="button" class="pure-button pure-button-primary">Log In</button>
 
                 <div id="alert-box">
-                    Please enter your user information.
+                    Please enter your user information. <br>
+                    <strong>
+                    Demo Login Info<br>
+                    Username: alex<br>
+                    Password: password
+                </strong>
                 </div>
             </fieldset>
         </form>
