HOTFIX Get market price wire5

--- a/view/updateitem.html
+++ b/view/updateitem.html
@@ -15,6 +15,7 @@
     <script src="../bower_components/underscore/underscore-min.js"></script>
 
     <script src="../js/main.js"></script>
+    <script src="../js/cacheit.js"></script>
     <script src="../js/wire5.js"></script>
 
     <title>Edit Item - CoinBucket</title>
@@ -142,7 +143,7 @@ loadSideNav(tmpNum);
                         <td><strong id="total">1199.10</strong></td>
                     </tr>
                     <tr>
-                        <td><strong>TOTAL W/ Premium</strong></td>
+                        <td><strong>w/ Premium</strong></td>
                         <td><strong id="totalPremium">1199.10</strong></td>
                     </tr>
                 </table>
