--- a/view/wire5.html
+++ b/view/wire5.html
@@ -15,6 +15,7 @@
     <script src="../bower_components/underscore/underscore-min.js"></script>
 
     <script src="../js/main.js"></script>
+    <script src="../js/cacheit.js"></script>
     <script src="../js/wire5.js"></script>
 
     <title>New Item - CoinBucket</title>
@@ -119,31 +120,31 @@ loadSideNav(tmpNum);
                     </tr>
                     <tr>
                         <td>Market Price</td>
-                        <td id="price" >1270.00</td>
+                        <td id="price" >0</td>
                     </tr>
                     <tr>
                         <td>Gold %</td>
-                        <td id="percent">0.999</td>
+                        <td id="percent">0</td>
                     </tr>
                     <tr>
                         <td>Weight/unit (g)</td>
-                        <td id="weight">1.244</td>
+                        <td id="weight">0</td>
                     </tr>
                     <tr>
                         <td>Gold ozt/u</td>
-                        <td id="goldo">0.0400</td>
+                        <td id="goldo">0</td>
                     </tr>
                     <tr>
                         <td>Total au (ozt)</td>
-                        <td id="totala">0.0400</td>
+                        <td id="totala">0</td>
                     </tr>
                     <tr>
                         <td><strong>TOTAL</strong></td>
-                        <td><strong id="total">1199.10</strong></td>
+                        <td><strong id="total">0</strong></td>
                     </tr>
                     <tr>
-                        <td><strong>TOTAL W/ Premium</strong></td>
-                        <td><strong id="totalPremium">1199.10</strong></td>
+                        <td><strong>w/ Premium</strong></td>
+                        <td><strong id="totalPremium">0</strong></td>
                     </tr>
                 </table>
 
