--- a/view/signup.html
+++ b/view/signup.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="bullion management site, rare coins, gold, silver, platinum">
-    <meta name="author" content="CSE134B Dream Team">
+    <meta name="author" content="CSE134B CacheIT">
     <title>Sign Up For CoinBucket</title>
 
 
@@ -86,6 +86,10 @@
                         window.location.href = "wire2.html";
 
 
+                    } else if(req.status === 400){
+                        document.getElementById('alert-box').style.color = "RED";
+                        document.getElementById('alert-box').innerHTML = "<p>Username or email have been taken! Please try again.</p>"+
+                        "<p style=\"color:black\">Or if you already signed up <a style=\"color:blue\" href=\"login.html\">login here</a></p>";
                     } else {                            // CASE ERROR
                         console.log("Error: ", req.statusText);
                         var errorMessage = "";
@@ -112,6 +116,13 @@
 
     <script>loadFooter();</script>
 
+    <!-- Add this just before your closing </body> tag -->
+    <!-- Replace 'APP_ID' with your app ID -->
+    <script>
+      window.intercomSettings = { app_id: 's4x71x8w' };
+    </script>
+    <!-- Replace 'APP_ID' with your app ID -->
+    <script>(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',intercomSettings);}else{var d=document;var i=function(){i.c(arguments)};i.q=[];i.c=function(args){i.q.push(args)};w.Intercom=i;function l(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/s4x71x8w';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);}if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})()</script>
 
 </body>
 
