--- a/view/updateitem.html
+++ b/view/updateitem.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="bullion management site, rare coins, gold, silver, platinum">
-    <meta name="author" content="CSE134B Dream Team">
+    <meta name="author" content="CSE134B CacheIT">
 
     <meta name=viewport content="width=device-width, initial-scale=.8, minimum-scale = .8, user-scalable=yes">
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
@@ -160,18 +160,14 @@ loadSideNav(tmpNum);
 loadFooter();
 
 </script>
-
+<!-- Add this just before your closing </body> tag -->
+<!-- Replace 'APP_ID' with your app ID -->
 <script>
-Intercom('trackEvent','hello');
-window.intercomSettings = {
-    page: 'updateitem',
-    name: cookie.get('cacheit_username'),
-    email: cookie.get('cacheit_email'),
-    created_at: cookie.get('cacheit_createAt'),
-    app_id: "s4x71x8w"
-};
-(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',intercomSettings);}else{var d=document;var i=function(){i.c(arguments)};i.q=[];i.c=function(args){i.q.push(args)};w.Intercom=i;function l(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/s4x71x8w';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);}if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})()
+  window.intercomSettings = { app_id: 's4x71x8w' };
 </script>
+<!-- Replace 'APP_ID' with your app ID -->
+<script>(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',intercomSettings);}else{var d=document;var i=function(){i.c(arguments)};i.q=[];i.c=function(args){i.q.push(args)};w.Intercom=i;function l(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/s4x71x8w';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);}if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})()</script>
+
 </body>
 
 </html>
