--- a/view/wire4.html
+++ b/view/wire4.html
@@ -126,15 +126,14 @@
     loadFooter();
     </script>
 
+    <!-- Add this just before your closing </body> tag -->
+    <!-- Replace 'APP_ID' with your app ID -->
     <script>
-    window.intercomSettings = {
-        name: cookie.get('cacheit_username'),
-        email: cookie.get('cacheit_email'),
-        created_at: cookie.get('cacheit_createAt'),
-        app_id: "s4x71x8w"
-    };
-    (function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',intercomSettings);}else{var d=document;var i=function(){i.c(arguments)};i.q=[];i.c=function(args){i.q.push(args)};w.Intercom=i;function l(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/s4x71x8w';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);}if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})()
+      window.intercomSettings = { app_id: 's4x71x8w' };
     </script>
+    <!-- Replace 'APP_ID' with your app ID -->
+    <script>(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',intercomSettings);}else{var d=document;var i=function(){i.c(arguments)};i.q=[];i.c=function(args){i.q.push(args)};w.Intercom=i;function l(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/s4x71x8w';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);}if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})()</script>
+
 </body>
 
 </html>
