--- a/view/signup.html
+++ b/view/signup.html
@@ -12,7 +12,8 @@
     <meta name=viewport content="width=device-width, initial-scale=.8, minimum-scale = .8, user-scalable=yes">
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-
+    
+    <link rel="stylesheet" type="text/css" href="../bower_components/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="../bower_components/pure/pure-min.css">
     <link rel="stylesheet" type="text/css" href="../style/style.css">
 
